--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
                             <div class="bar mx-auto h-1 w-28 bg-diamond-3 mt-2 mb-10 relative rounded-full"></div>
                             <p class="text-lg tx-lg font-semibold mb-8">I'm proud of my numbers</p>
                         </div>
-                        <div class="flex flex-wrap justify-center">
+                      <!--  <div class="flex flex-wrap justify-center">
                             <div class="w-full flex flex-col justify-center items-center sm:w-1/2 md:w-1/4 p-4">
                                 <div
                                     class="text-center circular-progress relative h-36 w-36 rounded-full flex items-center justify-center shadow-lg transition duration-500 ease-in-out">
@@ -757,6 +757,38 @@
                                     <div
                                         class="z-10 flex flex-col justify-center items-center text-5xl font-bold mx-auto counter">
                                         <span class="value-container  tx-diamond">50</span>
+                                    </div>
+                                </div>
+                                <p class="text-center text-lg tx-lg font-semibold my-4">Clients</p>
+                            </div>
+                        </div>-->
+                          <div class="flex flex-wrap justify-center">
+                            <div class="w-full flex flex-col justify-center items-center sm:w-1/2 md:w-1/4 p-4">
+                                <div
+                                    class="text-center circular-progress relative h-36 w-36 rounded-full flex items-center justify-center shadow-lg transition duration-500 ease-in-out">
+                                    <div
+                                        class="z-10 flex flex-col justify-center items-center text-5xl font-bold mx-auto counter">
+                                        <span class="value-container  tx-diamond" dataset="57">0</span>
+                                    </div>
+                                </div>
+                                <p class="text-center text-lg tx-lg font-semibold my-4">Projects Done</p>
+                            </div>
+                            <div class="w-full flex flex-col justify-center items-center sm:w-1/2 md:w-1/4 p-4">
+                                <div
+                                    class="text-center circular-progress relative h-36 w-36 rounded-full flex items-center justify-center shadow-lg transition duration-500 ease-in-out">
+                                    <div
+                                        class="z-10 flex flex-col justify-center items-center text-5xl font-bold mx-auto counter">
+                                        <span class="value-container  tx-diamond" dataset="52">0</span>
+                                    </div>
+                                </div>
+                                <p class="text-center text-lg tx-lg font-semibold my-4">Happy Customers</p>
+                            </div>
+                            <div class="w-full flex flex-col justify-center items-center sm:w-1/2 md:w-1/4 p-4">
+                                <div
+                                    class="text-center circular-progress relative h-36 w-36 rounded-full flex items-center justify-center shadow-lg transition duration-500 ease-in-out">
+                                    <div
+                                        class="z-10 flex flex-col justify-center items-center text-5xl font-bold mx-auto counter">
+                                        <span class="value-container  tx-diamond" dataset="52">0</span>
                                     </div>
                                 </div>
                                 <p class="text-center text-lg tx-lg font-semibold my-4">Clients</p>
