--- a/index.html
+++ b/index.html
@@ -1498,7 +1498,7 @@
             </div>
         </div>
         <div class="text-center mt-8 pb-4">
-            <p class="text-sm">&copy; 2024 Adenaike Idris. All rights reserved.</p>
+            <p class="text-sm">&copy; <script>document.write(new Date().getFullYear())</script>  Adenaike Idris. All rights reserved.</p>
         </div>
     </footer>
 
