--- a/projects.html
+++ b/projects.html
@@ -345,10 +345,10 @@ fetch('https://www.googleapis.com/blogger/v3/blogs/1953737097095782065/posts?key
 
             populateWebElement.innerHTML +=  
             `<div class="w-full md:w-1/2 p-4 bg-white shadow-lg my-5">
-            <div class="relative">
-            <img src="${src}" alt="${item.title}"  class="w-full h-64 object-cover mb-4">
-            </div>
-            <a href="${href}" target="_blank"><h2 class="text-xl font-bold mb-2" id="title">${item.title}</h2></a>
+            <a href="${href}" target="_blank"> <div class="relative">
+            <img src="${src}" alt="${item.title}"  class="w-full h-fit mb-4">
+            </div></a>
+           <h2 class="text-xl font-bold mb-2" id="title">${item.title}</h2>
             <p class="flex items-center justify-left mb-4"
                 <span class="flex items-center">
                             <svg class="w-4 h-4 text-yellow-500 mr-1" fill="currentColor"
