--- a/index.html
+++ b/index.html
@@ -673,15 +673,12 @@
                             </div>
                         </div>
                         <div class="image-container relative overflow-hidden" data-aos="fade-up">
-                            <img src="./assets/images/amara-landing-page.webp" alt="internet-marketing-business-landing-page" class="mb-0 w-full h-auto">
+                            <img src="./assets/images/martmagpage.jpg" alt="internet-marketing-business-landing-page" class="mb-0 w-full h-auto">
                             <div class="overlay absolute top-0 left-0 w-full h-full bg-gray-800 opacity-80 transition-all duration-300">
                                 <div class="text-white absolute bottom-0 left-0 p-4">
-                                    <h3 class="text-lg tx-lg font-bold mb-2">Landing Page</h3>
-                                    <p class="text-base tx-base tx-base mb-4">Built for a client to promote her Internet
-                                        Marketing
-                                        business.
-                                    </p>
-                                    <a href="https://amaraelufowoju.com/training" target="_blank"
+                                    <h3 class="text-lg tx-lg font-bold mb-2">Agency Website</h3>
+                                    <p class="text-base tx-base tx-base mb-4">Built this for a digital brand</p>
+                                    <a href="https://adenaikeidris.com.ng/martmagmediasolutions" target="_blank"
                                         class="bg-white text-gray-800 py-2 px-4 rounded-md  inline-block">View
                                     </a>
                                 </div>
@@ -1247,7 +1244,7 @@
                             <div id="contact"
                                 class="w-full md:mx-auto md:w-2/4 box-2 bg-white max-w-full py-10 px-5 border border-gray-400 rounded-lg mt-16 mr-5 mb-10 shadow-md h-500">
                                 <form action="https://formsubmit.co/drisaden@gmail.com" id method="POST">
-                                 <!-- <form action="https://formsubmit.co/drisaden@gmail.com" id="hire-form" method="POST">-->
+
                                  <input type="hidden" name="_subject" value="Idris, I need your service right away!">
                                  <input type="hidden" name="_next" value="https://adenaikeidris.com.ng/thanks.html">
                                     <div class="w-full">
