--- a/tutorials.html
+++ b/tutorials.html
@@ -137,8 +137,7 @@
                 </h2>
 
                 <div class="mt-6 flex justify-center align-center">
-                    <iframe width="100%" height="400" src="https://www.youtube.com/embed/s-Jxsf0aPJM"
-                        title="YouTube video player" frameborder="0"
+                    <iframe width="100%" height="400" src="https://www.youtube.com/embed/ci5vgwoyfH8?si=EEaEljX7RTTzFE4i"                        title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
                 </div>
