--- a/index.html
+++ b/index.html
@@ -195,6 +195,28 @@
                                     spent my hard-earned salary on make-money-online programs that promised the world
                                     but delivered nothing. I was like a ship lost at sea, with no anchor to hold onto.
                                 </p>
+                                <p class="text-gray-700 mb-10 text-base tx-base tx-base">
+                                    I wanted to be able to feed myself at least, and afford basic needs as a young teen. Also, my parents or family didn't give me any financial and moral support for my education. It dawned on me that I would have to fund my education by my financial strength. I had no option but to learn a skill. I opted to learn Web development. After I graduated in 2019, I started struggling financially, no good clothes, 3 daily meals never complete and this pressure from my mum to look for a means to survive by myself also kept coming. Until I decided to seek a teaching job. It sustained me for some periods. But as an ambitious young man, I know I can't continue to do such job if I really desired to be rich. Though, I've already started learning Web designing fundamentals then. But nothing was forthcoming, I didn't see any potential in the skill. I continue to learn it anyways...maybe because I love technology and innovations.
+                                </p>
+                                <p class="text-gray-700 mb-10 text-base tx-base tx-base">
+                                    I planned to pursue my education in 2020 but Covid 19 had other plans. As a person struggling to survive in such crises, I had to forfeit my admission process. Schools closed due to the pandemic, any means to earn money disappeared. You know the worse, I wasn't even connected to the internet. I had 500MB RAM phone back then, I don't know what's going online. I just had to sit back, watch news and let time decide my fate.
+                                </p>
+                                <p class="text-gray-700 mb-10 text-base tx-base tx-base">
+                                    During the Covid-19 period when the restrictions has lessened, one of my childhood friends introduced me to a web design training organized by Rayyan Technologies owned Fawaz(A full stack Developer), I joined the training in hope to resume my web design journey which is halted before. The training propelled me on the journey of becoming a great developer. I got so much in love with the skill that I had to quit my teaching job in 2021 to focus on it. Despite knowing I don't have means to survive. There's a glitter of hope in me. Relentlessly I focused on learning everything I could. 
+                                </p>
+                                <p class="text-gray-700 mb-10 text-base tx-base tx-base">
+                                    So, in 2021, I had already decided to fully learn the skill as I didn't have enough means to sit for UTME. I got a small Chromebook PC from the money I saved from my teaching job. Started doing little projects to finesse my knowledge. Later, that year, I got introduced to Internet marketing. That's when I discovered I could make money by providing my skills as a service for people who need it. I started learning from the best in the business, mentored by one of the top internet marketers, CALEB (owner of the AMAP course). Made lots of sales recommending helpful products to people. Kept networking and expanding my circle. 
+                                </p>
+                                <p class="text-gray-700 mb-10 text-base tx-base tx-base">
+                                    However, the frustrations of not getting admission after writing UTME thrice made me want to give up on my journey. But then, I'm glad I didn't. Because if I had given up, I wouldn't have met my mentor Martmag.I haven't made a dime in web design despite all the years of learning I've acquired until I met him. He opened my eyes to the celebrity version of web designing. I knew immediately that I've been sleeping on a timeline of gold all this while.
+                                </p>
+                                <p class="text-gray-700 mb-10 text-base tx-base tx-base">
+                                    Since then, web development has been a steady source of income for me.
+And the best part? It wasn't just about the money. It has also been a source of pride and accomplishment. Every line of code I write feels like a victory, like I'm building something that will change the world.
+                                </p>
+                                <p class="text-gray-700 mb-10 text-base tx-base tx-base">
+                                    
+                                </p>
                                 <p class="text-gray-700 mb-10 text-base tx-base tx-base">But then something changed. I
                                     discovered the
                                     world of web
