--- a/index.html
+++ b/index.html
@@ -217,34 +217,12 @@ And the best part? It wasn't just about the money. It has also been a source of 
                                 <p class="text-gray-700 mb-10 text-base tx-base tx-base">
                                     
                                 </p>
-                                <p class="text-gray-700 mb-10 text-base tx-base tx-base">But then something changed. I
-                                    discovered the
-                                    world of web
-                                    development, and it changed my life forever. I started learning from the best in the
-                                    business, people like Fawaz (CEO, <a href="https://rayyantech.sgm.ng"
-                                        target="_blank" rel="noopener noreferrer" class="text-blue-600">Rayyan
-                                        Technologies</a>), Caleb (<a href="https://expertnaire.com" target="_blank"
-                                        rel="noopener noreferrer" class="text-blue-600">Expertnaire</a> top affiliate),
-                                    who showed me the ropes and helped me hone my skills.
-                                </p>
-                                <p class="text-gray-700 mb-10 text-base tx-base tx-base">I remember the day I first
-                                    started coding. It
-                                    was like a
-                                    whole new world opened up to me, full of endless possibilities and untold riches. I
-                                    felt like I was finally on the path to success, like I had found my calling in life.
-                                </p>
-                                <p class="text-gray-700 mb-10 text-base tx-base tx-base">And the best part? It wasn't
-                                    just about the
-                                    money. Sure,
-                                    web development has been a steady source of income for me, but it's also been a
-                                    source of pride and accomplishment. Every line of code I write feels like a victory,
-                                    like I'm building something that will change the world.
-                                </p>
+            
                                 <p class="text-gray-700 mb-10 text-base tx-base tx-base">Looking back on my journey, I
                                     can't help but
                                     feel
-                                    grateful for the people who helped me along the way. Master Fawaz and others like
-                                    him have been instrumental in my success, guiding me through the tough times and
+                                    grateful for the people who helped me along the way. Master Fawaz, Martmag and others like
+                                    them who have been instrumental in my success, guiding me through the tough times and
                                     celebrating with me in the good times.
                                 </p>
                                 <p class="text-gray-700 mb-10 text-base tx-base tx-base">If you're like I was, lost and
