--- a/index.html
+++ b/index.html
@@ -221,11 +221,11 @@ And the best part? It wasn't just about the money. It has also been a source of 
                                 <p class="text-gray-700 mb-10 text-base tx-base tx-base">Looking back on my journey, I
                                     can't help but
                                     feel
-                                    grateful for the people who helped me along the way. Master Fawaz, Martmag and others like
+                                    be grateful for the people who helped me along the way. Master Fawaz, Martmag and others like
                                     them who have been instrumental in my success, guiding me through the tough times and
                                     celebrating with me in the good times.
                                 </p>
-                                <p class="text-gray-700 mb-10 text-base tx-base tx-base">If you're like I was, lost and
+                                <p class="text-gray-700 mb-10 text-base tx-base tx-base">If you're currently at the stage I was years ago, lost and
                                     searching for a
                                     way out, I
                                     urge you to give web development a try. It may just be the lifeline you've been
