--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                             <div class="px-4 py-6 md:py-8">
                                 <h2 class="text-2xl tx-2xl font-bold mb-4">My Story</h2>
                                 <div class="bar h-1 w-28 bg-diamond-3 mt-2 mb-10 relative rounded-full"></div>
-                                <p class="text-gray-700 mb-4 text-base tx-base tx-base">Do you ever feel like life is
+                                <p class="text-gray-700 mb-10 text-base tx-base tx-base">Do you ever feel like life is
                                     going nowhere, and
                                     you're
                                     stuck in a hopeless cycle of frustration and despair? That was me in 2020, a young
@@ -205,6 +205,8 @@
                                     Also, my parents or family didn't give me any financial and moral support for my
                                     education. It dawned on me that I would have to fund my education by my financial
                                     strength. I had no option but to learn a skill. I opted to learn Web development.
+                                </p>
+                                <p class="text-gray-700 mb-10 text-base tx-base tx-base">
                                     After I graduated in 2019, I started struggling financially, no good clothes, 3
                                     daily meals never complete and this pressure from my mum to look for a means to
                                     survive by myself also kept coming. I decided to seek a teaching job. Though, It
