--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@
                                 <p class="text-gray-700 mb-10 text-base tx-base tx-base">
                                     However, the frustrations of not getting admission after writing UTME thrice made me
                                     want to give up on my journey. But then, I'm glad I didn't. Because if I had given
-                                    up, I wouldn't have met my mentor Martmag (The CEO of <a href="https://martmagms.com">Martmag Media Solutions</a>). I haven't made a dime in web design
+                                    up, I wouldn't have met my mentor Martmag (The CEO of <a href="https://martmagms.com"  target="_blank"
+                                    rel="noopener noreferrer" class="text-blue-600">Martmag Media Solutions</a>). I haven't made a dime in web design
                                     despite all the years of learning I've acquired until I met him. He opened my eyes
                                     to the celebrity version of web designing. I knew immediately that I've been
                                     sleeping on a timeline of gold all this while.
