--- a/index.html
+++ b/index.html
@@ -365,25 +365,16 @@
                                                             <span
                                                                 class="bg-blue-100 tx-diamond tx-sm font-medium mr-2 px-2.5 ml-7 md:ml-2 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300">2019-2022</span><br>
                                                             <span class="text-base tx-base tx-base">Assume the role of
-                                                                an Intern at
-                                                                Rayyan Technologies</span>
+                                                                an Intern at Rayyan Technologies</span>
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <div
                                                     class="rounded-full bg-blue-500 border-white text-white border-4 h-12 w-12 absolute left-9 -translate-y-4 sm:translate-y-0 transform -translate-x-1/2 flex items-center justify-center">
                                                     <i class="fa-sharp fa-solid fa-laptop-code"></i>
-
-                                                    <!-- <svg xmlns="http://www.w3.org/2000/svg" class=""
-                                                        fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                                        <path stroke-linecap="round" stroke-linejoin="round"
-                                                            stroke-width="2"
-                                                            d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
-                                                    </svg> -->
                                                 </div>
                                             </div>
                                         </div>
-
                                         <div class="mt-6 sm:mt-0 sm:mb-12">
                                             <div class="flex flex-col sm:flex-row items-center">
                                                 <div class="ml-5 flex justify-start w-full mx-auto items-center">
@@ -409,7 +400,6 @@
                                                 </div>
                                             </div>
                                         </div>
-
                                         <div class="mt-6 sm:mt-0 sm:mb-12">
                                             <div class="flex flex-col sm:flex-row items-center">
                                                 <div class="ml-5 flex justify-start w-full mx-auto items-center">
@@ -456,6 +446,23 @@
                                                             stroke-width="2"
                                                             d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
                                                     </svg> -->
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="mt-6 sm:mt-0 sm:mb-12">
+                                            <div class="flex flex-col sm:flex-row items-center">
+                                                <div class="ml-5 flex justify-start w-full mx-auto items-center">
+                                                    <div class="w-full mr-10 sm:pl-8">
+                                                        <div class="p-4 bg-white rounded shadow">
+                                                            <span
+                                                                class="bg-blue-100 tx-diamond tx-sm font-medium mr-2 px-2.5 ml-7 md:ml-2 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300">Jan, 2024</span><br>
+                                                            <span class="text-base tx-base tx-base">Assume the role of an intern at MartmagMS Digital Agency </span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div
+                                                    class="rounded-full bg-blue-500 border-white text-white border-4 h-12 w-12 absolute left-9 -translate-y-4 sm:translate-y-0 transform -translate-x-1/2 flex items-center justify-center">
+                                                    <i class="fa-sharp fa-solid fa-student"></i>
                                                 </div>
                                             </div>
                                         </div>
