--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                                                 </div>
                                                 <div
                                                     class="rounded-full bg-blue-500 border-white text-white border-4 h-12 w-12 absolute left-9 -translate-y-4 sm:translate-y-0 transform -translate-x-1/2 flex items-center justify-center">
-                                                    <i class="fa-sharp fa-solid fa-student"></i>
+                                                    <i class="fa-solid fa-user-graduate"></i>
                                                 </div>
                                             </div>
                                         </div>
