--- a/jsa/index.html
+++ b/jsa/index.html
@@ -142,90 +142,8 @@ With UNLIMITED resources, coupon codes, files, free courses, design templates, g
 
     <!-- Footer section -->
     <footer class="bg-diamond text-white">
-        <div class="container mx-auto px-4 lg:px-10 py-12 flex flex-wrap justify-between">
-
-            <!-- Personal Info -->
-            <div class="w-full md:w-1/2 lg:w-1/4 mb-6">
-                <h3 class="text-xl font-bold mb-4">Personal Info</h3>
-                <!-- <p class="tx-sm mt-10">Personal Address:</p> -->
-                <a href="https://www.google.com/maps/search/?api=1&query=RMW2%2BQRC+Sagamu" target="_blank">
-                    <p class="my-4"><i class="fas fa-home mr-2"></i> 17b, Araromi street, Baruwa</p>
-                    <p class="my-4"><i class="fas fa-map-marker-alt mr-2"></i> Sagamu, Ogun State, Nigeria</p>
-                </a>
-                <p class="my-4"><i class="fas fa-phone mr-2"></i><a class="text-blue-500" href="tel:+2349036371010">
-                        (+234) 903 637 (Click to call)</a></p>
-            </div>
-
-            <!-- Nav link -->
-            <div class="w-full md:w-1/2 lg:w-1/5 mb-6">
-                <h3 class="text-xl font-bold mb-4">Quick Links</h3>
-                <ul>
-                    <li class="my-3"><a href="./index.html" class="link-btn inline-block relative leading-none">Home</a>
-                    </li>
-                    <li class="my-3"><a href="./projects.html"
-                            class="link-btn inline-block relative leading-none">Projects</a></li>
-                    <li class="my-3"><a
-                            href="https://docs.google.com/forms/d/e/1FAIpQLSfBW8peSoZOhmojarMQFOwwZpj-tUlFtez0_B90i52SIkHneQ/viewform"
-                            class="link-btn inline-block relative leading-none">Book A Call</a></li>
-                          
-                    <li class="my-3"><a href="./privacy_policy.html" class="link-btn inline-block relative leading-none"
-                            target="_blank" rel="noopener">Privacy Policy</a></li>
-                    <li class="my-3"><a href="./terms_of_services.html"
-                            class="link-btn inline-block relative leading-none" target="_blank" rel="noopener">Terms of
-                            Service</a></li>
-                </ul>
-            </div>
-
-            <!-- Newsletter -->
-            <div class="w-full md:w-1/2 lg:w-1/4 mb-6">
-                <h3 class="text-xl font-bold mb-4">Newsletter</h3>
-                <p class="text-base tx-base tx-base">Sign up for my newsletter and stay up to date with my latest news
-                    and events.</p>
-                <form class="mt-4">
-                    <div class="flex flex-wrap items-center">
-                        <!-- <input type="email" placeholder="Enter your email" class="w-full text-gray-700 px-4 py-2 rounded-lg shadow-sm focus:outline-none focus:shadow-outline-blue focus:border-blue-300"> -->
-                        <!-- <button type="submit"
-                            class="mt-4 font-bold py-2 px-4 rounded-md transition duration-300 border border-white text-white btn-hover focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 text-lg tx-lg">
-                            Subscribe
-                        </button> -->
-                    </div>
-                    <script async data-uid="068724265b" src="https://drisaden.ck.page/068724265b/index.js"></script>
-                </form>
-            </div>
-
-            <!-- Social icons -->
-            <div class="w-full md:w-1/2 lg:w-1/4 mb-6 lg:mx-auto">
-                <h3 class="text-xl font-bold mb-4">Follow me on These Platforms</h3>
-                <div class="flex justify-between">
-                    <a href="https://twitter.com/adenaike_idris" class="text-white hover:text-blue-400" target="_blank"
-                        rel="noopener" title="Twitter">
-                        <i class="fab fa-twitter fa-2x"></i>
-                    </a>
-                    <a href="https://m.facebook.com/aden.edriiz/" class="text-white hover:text-blue-600" target="_blank"
-                        rel="noopener" title="Facebook">
-                        <i class="fab fa-facebook fa-2x"></i>
-                    </a>
-                    <a href="https://wa.me/2349036371010?text=Hi,%20I%20want%20to%20know%20more%20about%20you.%20and%20also%20learn%20from%20you.%20Can%20I%20connect%20with%20you?"
-                        class="text-white hover:text-green-500" target="_blank" rel="noopener" title="WhatsApp">
-                        <i class="fab fa-whatsapp fa-2x"></i>
-                    </a>
-                    <a href="https://instagram.com/adenaike_idris" class="text-white hover:text-pink-600"
-                        target="_blank" rel="noopener" title="Instagram">
-                        <i class="fab fa-instagram fa-2x"></i>
-                    </a>
-                    <a href="https://www.linkedin.com/in/adenaikeidris/" class="text-white hover:text-blue-600"
-                        target="_blank" rel="noopener" title="LinkedIn">
-                        <i class="fab fa-linkedin fa-2x"></i>
-                    </a>
-                    <a href="https://github.com/drisaden" class="text-white hover:text-gray-600" target="_blank"
-                        rel="noopener" title="GitHub"><i class="fab fa-github fa-2x"></i></a>
-                    <a href="https://t.me/dris_Jewel" class="text-white hover:text-blue-600" target="_blank"
-                        rel="noopener" title="Telegram"><i class="fab fa-telegram-plane fa-2x"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="text-center mt-8 pb-4">
-            <p class="text-sm">&copy; 2024 Adenaike Idris. All rights reserved.</p>
+        <div class="text-center mt-8 p-4">
+            <p class="text-sm">&copy; 2024 Adenaike Idris || Jewellic Skills Academy. All rights reserved.</p>
         </div>
     </footer>
     
