thank you page updated

--- a/jsa/thank-you.html
+++ b/jsa/thank-you.html
@@ -15,6 +15,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link  href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:wght@200;300;400;500;600;700;900&display=swap"
             rel="stylesheet">
+            <link rel="stylesheet" href="../assets/css/style.css">
         <link rel="icon" type="image/png" href="./images/fav_ico.jpg">
        </head>
     
@@ -28,7 +29,7 @@
                 <p class="text-gray-700">I appreciate you joining the pre-launching of this glorious academy. Kindly confirm your membership from your email inbox. The links to the community channels will be sent to you shortly after you've confirmed your membership </p>
             </div>
             <div class="text-center">
-                <a href="https://adenaikeidris.com.ng/jsa" class="inline-block bg-blue-500 text-white px-4 py-2 rounded-full transition-colors duration-300 hover:bg-blue-600">Go
+                <a href="https://adenaikeidris.com.ng/jsa" class="inline-block bg-diamond text-white px-4 py-2 rounded-full transition-colors duration-300 hover:bg-blue-600">Go
                     Back to Home</a>
             </div>
         </div>
