--- a/jsa/thank-you.html
+++ b/jsa/thank-you.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description"
             content="I help businesses build responsive and functional website using modern tools and innovations- Check my Portfolio out">
         <meta name="keywords"
