--- a/jsa/thank-you.html
+++ b/jsa/thank-you.html
@@ -23,7 +23,7 @@
     <div class="min-h-screen flex items-center justify-center bg-gray-100">
         <div class="max-w-md p-8 bg-white rounded shadow-lg">
             <div class="text-center mb-6">
-                <h1 class="text-3xl font-bold text-gray-800">Congratulations. You're now qualified to be part of the pioneer students of the Jewellic Skills Academy</h1>
+                <h1 class="text-3xl font-bold text-gray-800">Congratulations, <span id="firstName" class="text-primary"></span>. You're now qualified to be part of the pioneer students of the Jewellic Skills Academy</h1>
             </div>
             <div class="mb-6">
                 <p class="text-gray-700">I appreciate you joining the pre-launching of this glorious academy. Kindly confirm your membership from your email inbox. The links to the community channels will be sent to you shortly after you've confirmed your membership </p>
@@ -34,5 +34,23 @@
             </div>
         </div>
     </div>
+
+    <script>
+      const urlParams = new URLSearchParams(window.location.search);
+
+const firstName = urlParams.get('first_name');
+const email = urlParams.get('email');
+const subscriberID = urlParams.get('ck_subscriber_id');
+
+document.getElementById('firstName').textContent = firstName || "Not Found";
+document.getElementById('email').textContent = email || "Not Found";
+document.getElementById('subscriberID').textContent = subscriberID || "Not Found";
+
+    </script>
 </body>
 </html>
+
+
+
+
+https://adenaikeidris.com.ng/jsa/thank-you?first_name=Bolu&email=adenaikeidris01%40gmail.com&ck_subscriber_id=2008661820
