--- a/jsa/thank-you.html
+++ b/jsa/thank-you.html
@@ -56,7 +56,7 @@
                 <!-- Telegram -->
                 <div class="flex flex-col justify-center items-center w-full md:w-4/12 mx-auto my-10">
 
-                    <a href="#" class="text-blue-400 hover:text-blue-600 text-center">
+                    <a href="https://t.me/+kGXpcdqajks1NzI0" class="text-blue-400 hover:text-blue-600 text-center">
                         <i class="fab fa-telegram-plane text-5xl text-blue-400 hover:text-blue-400"></i>
                         <span class="block"> Telegram</span>
                     </a>
