--- a/jsa/thank-you.html
+++ b/jsa/thank-you.html
@@ -30,7 +30,7 @@
 
     <body>
         <div class="min-h-screen flex items-center justify-center bg-gray-100">
-            <div class="max-w-md p-8 bg-white rounded shadow-lg">
+            <div class="max-w-md p-8 mx-5 md:mx-auto bg-white rounded shadow-lg">
                 <div class="text-center mb-6">
                     <h1
                         class="text-3xl font-bold text-gray-800">Congratulations,
@@ -43,7 +43,7 @@
                         pre-launching of this glorious academy. Click the links
                         to join the community channels</p>
                 </div>
-            <div class="w-full h-full flex flex-col md:flex-row justify-between items-center">
+            <div class="w-full h-full flex justify-between items-center">
                 <!-- WhatsApp -->
                 <div class="flex flex-col justify-center items-center w-full md:w-4/12 mx-auto my-5">
                     <a href="https://whatsapp.com/channel/0029VahbjSkCXC3G5a7YZM2U" target="_blank"
