--- a/jsa/thank-you.html
+++ b/jsa/thank-you.html
@@ -33,7 +33,7 @@
             <div class="max-w-md p-8 mx-5 md:mx-auto bg-white rounded shadow-lg">
                 <div class="text-center mb-6">
                     <h1
-                        class="text-3xl font-bold text-gray-800">Congratulations
+                        class="text-3xl font-bold text-gray-800">Congratulations,
                         <span id="firstName" class="text-primary"></span>.
                         You're now qualified to be part of the pioneer students
                         of the Jewellic Skills Academy</h1>
