--- a/jsa/thank-you.html
+++ b/jsa/thank-you.html
@@ -33,7 +33,7 @@
             <div class="max-w-md p-8 mx-5 md:mx-auto bg-white rounded shadow-lg">
                 <div class="text-center mb-6">
                     <h1
-                        class="text-3xl font-bold text-gray-800">Congratulations,
+                        class="text-2xl md:text-3xl font-bold text-gray-800">Congratulations,
                         <span id="firstName" class="text-primary"></span>.
                         You're now qualified to be part of the pioneer students
                         of the Jewellic Skills Academy</h1>
@@ -56,7 +56,7 @@
                 <!-- Telegram -->
                 <div class="flex flex-col justify-center items-center w-full md:w-4/12 mx-auto my-10">
 
-                    <a href="https://t.me/+kGXpcdqajks1NzI0" class="text-blue-400 hover:text-blue-600 text-center">
+                    <a href="https://t.me/+kGXpcdqajks1NzI0" target="_blank" class="text-blue-400 hover:text-blue-600 text-center">
                         <i class="fab fa-telegram-plane text-5xl text-blue-400 hover:text-blue-400"></i>
                         <span class="block"> Telegram</span>
                     </a>
