--- a/jsa/thank-you.html
+++ b/jsa/thank-you.html
@@ -34,14 +34,12 @@
                 <div class="text-center mb-6">
                     <h1
                         class="text-2xl md:text-3xl font-bold text-gray-800">Congratulations,
-                        <span id="firstName" class="text-primary"></span>.
-                        You're now qualified to be part of the pioneer students
+                        <span id="firstName" class="text-primary"></span>. You're now qualified to be part of the pioneer students
                         of the Jewellic Skills Academy</h1>
                 </div>
                 <div class="mb-6">
-                    <p class="text-gray-700">I appreciate you joining the
-                        pre-launching of this glorious academy. Click the links
-                        to join the community channels</p>
+                    <p class="text-gray-700">I appreciate you joining this glorious academy. Click the links
+                        to join the community channels immediately</p>
                 </div>
             <div class="w-full h-full flex justify-between items-center">
                 <!-- WhatsApp -->
