--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                                     urge you to give web development a try. It may just be the lifeline you've been
                                     looking for, the thing that will change your life forever.
                                 </p>
-                                <a href="https://adenaikeidris.com.ng/7-figure-business" target="_blank"
+                                <a href="https://drisaden.github.io/7-figure-business" target="_blank"
                                     class="text-white bg-blue-500 py-2 px-4 rounded-md hover:bg-blue-600 transition duration-300 ease-in-out">Learn
                                     More</a>
                             </div>
@@ -720,7 +720,7 @@
                                     <p class="text-base tx-base tx-base mb-4">Just started building this currency
                                         converter as a new project.
                                     </p>
-                                    <a href="https://adenaikeidris.com.ng/currencyconverter" target="_blank"
+                                    <a href="https://drisaden.github.io/currencyconverter" target="_blank"
                                         class="bg-white text-gray-800 py-2 px-4 rounded-md inline-block">View
                                     </a>
                                 </div>
@@ -734,7 +734,7 @@
                                 <div class="text-white absolute bottom-0 left-0 p-4">
                                     <h3 class="text-lg tx-lg font-bold mb-2">Agency Website</h3>
                                     <p class="text-base tx-base tx-base mb-4">Built this for a digital brand</p>
-                                    <a href="https://adenaikeidris.com.ng/martmagmediasolutions" target="_blank"
+                                    <a href="https://drisaden.github.io/martmagmediasolutions" target="_blank"
                                         class="bg-white text-gray-800 py-2 px-4 rounded-md  inline-block">View
                                     </a>
                                 </div>
@@ -750,7 +750,7 @@
                                     <p class="text-base tx-base tx-base mb-4">Countdown page created for Muslims before
                                         Ramadan
                                     </p>
-                                    <a href="https://adenaikeidris.com.ng/1444-ramadan-countdown" target="_blank"
+                                    <a href="https://drisaden.github.io/1444-ramadan-countdown" target="_blank"
                                         class="bg-white text-gray-800 py-2 px-4 rounded-md inline-block">View
                                     </a>
                                 </div>
@@ -1309,7 +1309,7 @@
                                 <form action="https://formsubmit.co/drisaden@gmail.com" id method="POST">
 
                                     <input type="hidden" name="_subject" value="Idris, I need your service right away!">
-                                    <input type="hidden" name="_next" value="https://adenaikeidris.com.ng/thanks.html">
+                                    <input type="hidden" name="_next" value="https://drisaden.github.io/thanks.html">
                                     <div class="w-full">
                                         <div class="user-input relative w-full mb-4">
                                             <br />
@@ -1558,11 +1558,11 @@
                             <span class="bg-white rounded-lg px-3 py-1 tx-sm text-gray-600">${item.labels}</span>
                         </div>
                         <div class="text-white absolute bottom-0 left-0 p-4">
-                            <a href="https://adenaikeidris.com.ng/single.html?id=${item.id}" target="_blank">
+                            <a href="https://drisaden.github.io/single.html?id=${item.id}" target="_blank">
                                 <div class="font-bold md:text-xl text-base tx-base tx-base mb-2">${item.title}</div>
                             </a>
                             <div class="flex justify-between items-center">
-                                <a href="https://adenaikeidris.com.ng/single.html?id=${item.id}" target="_blank" rel="noopener"
+                                <a href="https://drisaden.github.io/single.html?id=${item.id}" target="_blank" rel="noopener"
                                     class="ml-1 link-btn my-3 inline-block text-white relative leading-none font-light text-sm">Read
                                     More</a>
                                 <div class="flex items-center justify-center">
